feat: conteudo do header de navbar finalizado

--- a/home.html
+++ b/home.html
@@ -13,8 +13,43 @@
     <link rel="stylesheet" href="css/style.css">
     <title>KN Suplementos</title>
 </head>
+
 <body>
-    
+    <header class="c-header">
+        <div>
+            <i class="bi bi-person-fill"></i>
+            <span><a href="#_">Login</a> / <a href="#_">Cadastre-se</a></span>
+        </div>
+
+        <div>
+            <img src="images/logo-kn.jpg" alt="logo-knSuplementos">
+        </div>
+
+        <div>
+            <form class="d-flex c-search" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+            </form>
+            <i class="bi bi-heart"></i>
+            <i class="bi bi-basket3"></i>
+        </div>
+    </header>
+    <nav>
+        <ul class="nav nav-pills nav-fill">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">OFERTAS</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">CATEGORIAS</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">CALCULADORAS</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link">PARCERIAS</a>
+            </li>
+        </ul>
+    </nav>
 
 
     <!-- bootstrap -->
