--- a/home.html
+++ b/home.html
@@ -16,22 +16,25 @@
 
 <body>
     <header class="c-header">
-        <div>
+        <div class="c-header__login">
             <i class="bi bi-person-fill"></i>
             <span><a href="#_">Login</a> / <a href="#_">Cadastre-se</a></span>
         </div>
 
-        <div>
+        <div class="c-header__logo text-center py-2">
             <img src="images/logo-kn.jpg" alt="logo-knSuplementos">
         </div>
 
-        <div>
+        <div class="c-header__fav">
             <form class="d-flex c-search" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control me-2" type="search" placeholder="Pesquisar..." aria-label="Search">
                 <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
             </form>
-            <i class="bi bi-heart"></i>
-            <i class="bi bi-basket3"></i>
+            
+            <div class="c-header__icons">
+                <i class="bi bi-heart"></i>
+                <i class="bi bi-basket3"></i>
+            </div>
         </div>
     </header>
     <nav>
