feat: estilização do header parcialmente finalizada

--- a/home.html
+++ b/home.html
@@ -16,27 +16,27 @@
 
 <body>
     <header class="c-header">
-        <div class="c-header__login">
-            <i class="bi bi-person-fill"></i>
-            <span><a href="#_">Login</a> / <a href="#_">Cadastre-se</a></span>
-        </div>
-
-        <div class="c-header__logo text-center py-2">
-            <img src="images/logo-kn.jpg" alt="logo-knSuplementos">
-        </div>
-
-        <div class="c-header__fav">
-            <form class="d-flex c-search" role="search">
-                <input class="form-control me-2" type="search" placeholder="Pesquisar..." aria-label="Search">
-                <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
-            </form>
-            
-            <div class="c-header__icons">
-                <i class="bi bi-heart"></i>
-                <i class="bi bi-basket3"></i>
+        <div class="row">
+            <div class="c-header__login pt-2 col-12 col-sm-6 order-1 order-sm-2">
+                <i class="bi bi-person-fill"></i>
+                <span><a href="#_">Login</a> / <a href="#_">Cadastre-se</a></span>
+            </div>
+            <div class="c-header__logo text-center py-2 pt-sm-4 col-12 order-2 order-sm-1">
+                <img src="images/logo-kn.jpg" alt="logo-knSuplementos">
+            </div>
+            <div class="c-header__fav col-12 col-sm-6 order-3">
+                <form class="d-flex c-search" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Pesquisar..." aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+                </form>
+                <div class="c-header__icons">
+                    <i class="bi bi-heart"></i>
+                    <i class="bi bi-basket3"></i>
+                </div>
             </div>
         </div>
     </header>
+
     <nav>
         <ul class="nav nav-pills nav-fill">
             <li class="nav-item">
