feat: estilização do nav parcialmente finalizada

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
                 <span><a href="#_">Login</a> / <a href="#_">Cadastre-se</a></span>
             </div>
             <div class="c-header__logo text-center py-2 pt-sm-4 col-12 order-2 order-sm-1">
-                <img src="images/logo-kn.jpg" alt="logo-knSuplementos">
+                <img src="images/logo-kn.png" alt="logo-knSuplementos">
             </div>
             <div class="c-header__fav col-12 col-sm-6 order-3">
                 <form class="d-flex c-search" role="search">
@@ -37,8 +37,8 @@
         </div>
     </header>
 
-    <nav>
-        <ul class="nav nav-pills nav-fill">
+    <nav class="c-nav">
+        <ul class="c-nav__items container nav nav-pills nav-fill">
             <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">OFERTAS</a>
             </li>
