--- a/home.html
+++ b/home.html
@@ -17,12 +17,12 @@
 <body>
     <header class="c-header">
         <div class="row">
-            <div class="c-header__login pt-2 col-12 col-sm-6 order-1 order-sm-2">
+            <div class="c-header__login pt-sm-2 col-12 col-sm-6 order-1 order-sm-2">
                 <i class="bi bi-person-fill"></i>
                 <span><a href="#_">Login</a> / <a href="#_">Cadastre-se</a></span>
             </div>
             <div class="c-header__logo text-center py-2 pt-sm-4 col-12 order-2 order-sm-1">
-                <img src="images/logo-kn.png" alt="logo-knSuplementos">
+                <img src="images/logo-kn.jpg" alt="logo-knSuplementos">
             </div>
             <div class="c-header__fav col-12 col-sm-6 order-3">
                 <form class="d-flex c-search" role="search">
