feat: estilização das calcuçadoras parcialmente finalizados

--- a/home.html
+++ b/home.html
@@ -206,9 +206,9 @@
             </div>
         </section>
         
-        <div class="c-main__colapse">
+        <div class="c-main__colapse text-center">
             <p class="d-inline-flex gap-1">
-                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                <a class="btn btn-outline-light" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                     MAIS
                 </a>
             </p>
@@ -262,28 +262,35 @@
         </div>
 
         <section class="c-main__calc">
-            <p class="h1">CALCULADORAS</p>
+            <p class="h1 title-catalog">CALCULADORAS</p>
             <div class="c-calc__cards">
-                <a href="" class="c-calc__items">
-                    <div>
-                        <img src="" alt="">
-                    </div>
-                    <p class="h2">TAXA METABÓLICA BASAL</p>
-                </a>
+                
+                <div class="c-calc__items">
+                    <a href="#_">
+                        <div class="calc-img calc-1">
+                            <img src="images/calculadora-de-calorias.png" alt="">
+                        </div>
+                        <p class="h2 calcDesc pt-3">TAXA METABÓLICA BASAL</p>
+                    </a>
+                </div>
 
-                <a href="" class="c-calc__items">
-                    <div>
-                        <img src="" alt="">
-                    </div>
-                    <p class="h2">PERCENTUAL DE GORDURA</p>
-                </a>
+                <div class="c-calc__items calc-2">
+                    <a href="#_">
+                        <div class="calc-img">
+                            <img src="images/gordura.png" alt="">
+                        </div>
+                        <p class="h2 calcDesc pt-3">PERCENTUAL DE GORDURA</p>
+                    </a>
+                </div>
 
-                <a href="" class="c-calc__items">
-                    <div>
-                        <img src="" alt="">
-                    </div>
-                    <p class="h2">PESO IDEAL</p>
-                </a>
+                <div class="c-calc__items calc-3">
+                    <a href="#_">
+                        <div class="calc-img">
+                            <img src="images/kcal.png" alt="">
+                        </div>
+                        <p class="h2 calcDesc pt-3">PESO IDEAL</p>
+                    </a>
+                </div>
             </div>
         </section>
 
