--- a/home.html
+++ b/home.html
@@ -309,16 +309,16 @@
             </div>
         </div>
 
-        <div class="c-footer__dev">
+        <div class="c-footer__dev pt-4">
             <p class="h2">BARBOSA WEB DEVELOPER</p>
-            <div class="c-kn__icons">
+            <div class="c-dev__icons">
                 <a href="#_"><i class="bi bi-instagram"></i></a>
                 <a href="#_"><i class="bi bi-linkedin"></i></a>
                 <a href="#_"><i class="bi bi-github"></i></a>
             </div>
         </div>
 
-        <div class="c-footer__contact">
+        <div class="c-footer__contact pt-4">
             <p>CONTATO</p>
             <p>SAQ</p>
         </div>
