feat: estilização dos media querys finalizados

--- a/home.html
+++ b/home.html
@@ -93,7 +93,9 @@
             <p class="h1 title-catalog">PROTEÍNAS</p>
             <div class="c-catalog-items container-fluid">
                 <div class="card c-catalog__card item1" id="card1">
-                    <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top img-card" alt="...">
+                    <div class="imgDiv">
+                        <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top" alt="...">
+                    </div>
                     <div class="card-body card-infos">
                         <p class="card-text productDescr">(TOP) Whey Protein Concentrado (1KG) - Growth Supplements</p>
                         <h5 class="card-title price">R$ 50,40</h5>
@@ -102,7 +104,9 @@
                 </div>
 
                 <div class="card c-catalog__card item2" id="card2">
-                    <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top img-card" alt="...">
+                    <div class="imgDiv">
+                        <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top" alt="...">
+                    </div>
                     <div class="card-body card-infos">
                         <p class="card-text productDescr">(TOP) Whey Protein Concentrado (1KG) - Growth Supplements</p>
                         <h5 class="card-title price">R$ 50,40</h5>
@@ -111,7 +115,9 @@
                 </div>
 
                 <div class="card c-catalog__card item3" id="card3">
-                    <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top img-card" alt="...">
+                    <div class="imgDiv">
+                        <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top" alt="...">
+                    </div>
                     <div class="card-body card-infos">
                         <p class="card-text productDescr">(TOP) Whey Protein Concentrado (1KG) - Growth Supplements</p>
                         <h5 class="card-title price">R$ 50,40</h5>
@@ -132,7 +138,9 @@
             <p class="h1 title-catalog">AMINOÁCIDOS</p>
             <div class="c-catalog-items container-fluid">
                 <div class="card c-catalog__card item1" id="card4">
-                    <img src="images/whey-isolado-growth-v2.png" class="card-img-top img-card" alt="...">
+                    <div class="imgDiv">
+                        <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top" alt="...">
+                    </div>
                     <div class="card-body card-infos">
                         <p class="card-text productDescr">(TOP) Whey Protein Concentrado (1KG) - Growth Supplements</p>
                         <h5 class="card-title price">R$ 50,40</h5>
@@ -141,7 +149,9 @@
                 </div>
 
                 <div class="card c-catalog__card item2" id="card5">
-                    <img src="images/whey-isolado-growth-v2.png" class="card-img-top img-card" alt="...">
+                    <div class="imgDiv">
+                        <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top" alt="...">
+                    </div>
                     <div class="card-body card-infos">
                         <p class="card-text productDescr">(TOP) Whey Protein Concentrado (1KG) - Growth Supplements</p>
                         <h5 class="card-title price">R$ 50,40</h5>
@@ -150,7 +160,9 @@
                 </div>
 
                 <div class="card c-catalog__card item3" id="card6">
-                    <img src="images/whey-isolado-growth-v2.png" class="card-img-top img-card" alt="...">
+                    <div class="imgDiv">
+                        <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top" alt="...">
+                    </div>
                     <div class="card-body card-infos">
                         <p class="card-text productDescr">(TOP) Whey Protein Concentrado (1KG) - Growth Supplements</p>
                         <h5 class="card-title price">R$ 50,40</h5>
@@ -171,7 +183,9 @@
             <p class="h1 title-catalog">PRÉ-TREINOS</p>
             <div class="c-catalog-items container-fluid">
                 <div class="card c-catalog__card item1" id="card7">
-                    <img src="images/whey.png" class="card-img-top img-card" alt="...">
+                    <div class="imgDiv">
+                        <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top" alt="...">
+                    </div>
                     <div class="card-body card-infos">
                         <p class="card-text productDescr">(TOP) Whey Protein Concentrado (1KG) - Growth Supplements</p>
                         <h5 class="card-title price">R$ 50,40</h5>
@@ -180,7 +194,9 @@
                 </div>
 
                 <div class="card c-catalog__card item2" id="card8">
-                    <img src="images/whey.png" class="card-img-top img-card" alt="...">
+                    <div class="imgDiv">
+                        <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top" alt="...">
+                    </div>
                     <div class="card-body card-infos">
                         <p class="card-text productDescr">(TOP) Whey Protein Concentrado (1KG) - Growth Supplements</p>
                         <h5 class="card-title price">R$ 50,40</h5>
@@ -189,7 +205,9 @@
                 </div>
 
                 <div class="card c-catalog__card item3" id="card9">
-                    <img src="images/whey.png" class="card-img-top img-card" alt="...">
+                    <div class="imgDiv">
+                        <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top" alt="...">
+                    </div>
                     <div class="card-body card-infos">
                         <p class="card-text productDescr">(TOP) Whey Protein Concentrado (1KG) - Growth Supplements</p>
                         <h5 class="card-title price">R$ 50,40</h5>
@@ -219,7 +237,9 @@
                     <p class="h1 title-catalog">CREATINAS</p>
                     <div class="c-catalog-items container-fluid">
                         <div class="card c-catalog__card item1" id="card10">
-                            <img src="images/whey.png" class="card-img-top img-card" alt="...">
+                            <div class="imgDiv">
+                                <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top" alt="...">
+                            </div>
                             <div class="card-body card-infos">
                                 <p class="card-text productDescr">(TOP) Whey Protein Concentrado (1KG) - Growth Supplements</p>
                                 <h5 class="card-title price">R$ 50,40</h5>
@@ -228,7 +248,9 @@
                         </div>
                         
                         <div class="card c-catalog__card item2" id="card11">
-                            <img src="images/whey.png" class="card-img-top img-card" alt="...">
+                            <div class="imgDiv">
+                                <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top" alt="...">
+                            </div>
                             <div class="card-body card-infos">
                                 <p class="card-text productDescr">(TOP) Whey Protein Concentrado (1KG) - Growth Supplements</p>
                                 <h5 class="card-title price">R$ 50,40</h5>
@@ -237,7 +259,9 @@
                         </div>
 
                         <div class="card c-catalog__card item3" id="card12">
-                            <img src="images/whey.png" class="card-img-top img-card" alt="...">
+                            <div class="imgDiv">
+                                <img src="images/colageno-hidrolisado-150g-growth-supplements.png" class="card-img-top" alt="...">
+                            </div>
                             <div class="card-body card-infos">
                                 <p class="card-text productDescr">(TOP) Whey Protein Concentrado (1KG) - Growth Supplements</p>
                                 <h5 class="card-title price">R$ 50,40</h5>
@@ -309,18 +333,19 @@
             </div>
         </div>
 
-        <div class="c-footer__dev pt-4">
-            <p class="h2">BARBOSA WEB DEVELOPER</p>
-            <div class="c-dev__icons">
-                <a href="#_"><i class="bi bi-instagram"></i></a>
-                <a href="#_"><i class="bi bi-linkedin"></i></a>
-                <a href="#_"><i class="bi bi-github"></i></a>
+        <div class="container c-footer__devCont">
+            <div class="c-footer__dev pt-4">
+                <p class="h2">BARBOSA WEB DEVELOPER</p>
+                <div class="c-dev__icons">
+                    <a href="#_"><i class="bi bi-instagram"></i></a>
+                    <a href="#_"><i class="bi bi-linkedin"></i></a>
+                    <a href="#_"><i class="bi bi-github"></i></a>
+                </div>
             </div>
-        </div>
-
-        <div class="c-footer__contact pt-4">
-            <p>CONTATO</p>
-            <p>SAQ</p>
+            <div class="c-footer__contact pt-4">
+                <p>CONTATO</p>
+                <p>SAQ</p>
+            </div>
         </div>
 
         <div class="c-footer__rights">
