feat: Hovers aplicados nos links e cards

--- a/home.html
+++ b/home.html
@@ -226,7 +226,7 @@
         
         <div class="c-main__colapse text-center">
             <p class="d-inline-flex gap-1">
-                <a class="btn btn-outline-light" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                <a class="btn btn-outline-warning" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                     MAIS
                 </a>
             </p>
