feat: Links das redes sociais adicionados

--- a/home.html
+++ b/home.html
@@ -328,7 +328,7 @@
             <img src="images/logo-kn.jpg" alt="logo-knSuplementos-footer">
             <div class="c-kn__icons">
                 <a href="#_"><i class="bi bi-facebook"></i></a>
-                <a href="#_"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.instagram.com/knsuplementosoficial_/" target="_blank"><i class="bi bi-instagram"></i></a>
                 <a href="#_"><i class="bi bi-tiktok"></i></a>
             </div>
         </div>
@@ -337,9 +337,9 @@
             <div class="c-footer__dev pt-4">
                 <p class="h2">BARBOSA WEB DEVELOPER</p>
                 <div class="c-dev__icons">
-                    <a href="#_"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/lucasbarbosa_14/" target="_blank"><i class="bi bi-instagram"></i></a>
                     <a href="#_"><i class="bi bi-linkedin"></i></a>
-                    <a href="#_"><i class="bi bi-github"></i></a>
+                    <a href="https://github.com/lucasbarbosadeveloper" target="_blank"><i class="bi bi-github"></i></a>
                 </div>
             </div>
             <div class="c-footer__contact pt-4">
